--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Caitlin Eatman: Front-End Web Developer</title>
     <link rel="icon" type="image/png" href="favicon.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   </head>
   <body>
 
